# aoc-rust

./: .gitignore  Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: lib.rs
aoc/src/helpers/: file.rs  grid.rs  parsing.rs
puzzles/: Cargo.toml
puzzles/input/2025/day01/: puzzle.md
puzzles/input/2025/day02/: puzzle.md
puzzles/src/: main.rs
