[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
resolver = "3"

default-run = "cli"

[dependencies]
# CLI
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
chrono = "0.4.42"

# Useful crates
anyhow = "1.0.100"
itertools = "0.14.0"
pathfinding = "4.14.0"
regex = "1.12.2"
